--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html, body {
     padding: 20px;
     width: 40px;
     box-align: middle;
-    margin-left: 190px;
+    margin-left: 175px;
   }
 
 .about-title {
@@ -117,7 +117,7 @@ html, body {
 }
 
 .confusion-box {
-    width: 270px;
+    width: 260px;
     height: 100px;
     background-color: white;
     padding: 50px;
@@ -152,16 +152,18 @@ html, body {
   color:white;
   font-size: 36px;
   text-align: left;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  margin-left: 10px;
 }
 
 .contact-text {
   color: white;
   font-size: 28px;
   text-align: left;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  margin-left: 10px;
 }
 
 .space-links {
@@ -173,7 +175,7 @@ html, body {
   color: white;
   font-size: 28px;
   margin-left: 700px;
-  margin-right: 10p;
+  margin-right: 10px;
 }
 
 .join-text {
@@ -182,7 +184,7 @@ html, body {
 
 .more-space {
   margin-left: 974px;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 .space-left {
